trying to add iOS web app support

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="missions.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/shared/Stone.png">
+  
+  <!-- iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!--meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"-->
+  <link rel="apple-touch-icon" href="/apple-icon.png">
+  <link rel="apple-touch-startup-image" href="/launch.png">
+  <meta name="apple-mobile-web-app-title" content="Mission Tracker">
 </head>
 <body id="body">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
