--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <!-- must be first in head. from https://gist.github.com/irae/1042167; prevents the app opening safari when clicking on links  -->
-  <!--script>
+  <script>
     (function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(chref=d.href).replace(e.href,"").indexOf("#")&&(!/^[a-z\+\.\-]+:/i.test(chref)||chref.indexOf(e.protocol+"//"+e.host)===0)&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone");
-  </script-->
+  </script>
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142480721-1"></script>
