--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
   <!--link rel="apple-touch-icon" href="/apple-icon.png"-->
   <!--link rel="apple-touch-startup-image" href="/launch.png"-->
   <meta name="apple-mobile-web-app-title" content="Mission Tracker">
+  
+  <!-- cache control: just stop everything so cache is never used -->
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+  <meta http-equiv="pragma" content="no-cache" />
 </head>
 <body id="body">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
